@startuml

package "BusinessLogic.entities" {
    class Pintura {
        - idPintura: int
        - titulo: String
        - anio: int
        - descripcion: String
        - codigoBarras: String
        - idCategoria: int
        - idAutor: int
        - idSeccion: int
        - imagen: String
        - estado: String
        - fechaCrea: LocalDateTime
        - fechaModifica: LocalDateTime
        + getIdPintura(): int
        + setIdPintura(id: int)
        + ...
    }

    class Usuario {
        - idUsuarios: int
        - nombre: String
        - identificacion: String
        - idCredenciales: int
        - idRol: int
        - estado: String
        - fechaCrea: LocalDateTime
        - fechaModifica: LocalDateTime
        + getIdUsuarios(): int
        + setIdUsuarios(id: int)
        + ...
    }
}

package "BusinessLogic.services" {
    class PinturaService {
        - pinturaDAO: PinturaDAO
        + insertarPintura(p: PinturaDTO)
        + actualizarPintura(p: PinturaDTO)
        + eliminarPintura(id: int)
        + obtenerPinturaPorCodigoBarras(codigo: String): PinturaDTO
        + obtenerTodasLasPinturas(): List<PinturaDTO>
        + obtenerPinturaPorId(id: int): PinturaDTO
    }

    class UsuarioService {
        - usuarioDAO: UsuarioDAO
        + insertarUsuario(u: UsuarioDTO)
        + obtenerTodosLosUsuarios(): List<UsuarioDTO>
    }
}

package "DataAccess.DAO" {
    class PinturaDAO {
        + insertarPintura(p: PinturaDTO)
        + actualizarPintura(p: PinturaDTO)
        + eliminarPintura(id: int)
        + obtenerPinturaPorCodigoBarras(codigo: String): PinturaDTO
        + obtenerTodasLasPinturas(): List<PinturaDTO>
        + obtenerPinturaPorId(id: int): PinturaDTO
    }

    class UsuarioDAO {
        + insertarUsuario(u: UsuarioDTO)
        + actualizarUsuario(u: UsuarioDTO)
        + eliminarUsuario(id: int)
        + obtenerUsuarioPorIdentificacion(identificacion: String): UsuarioDTO
        + obtenerTodosUsuarios(): List<UsuarioDTO>
        + obtenerUsuarioPorId(id: int): UsuarioDTO
    }
}

package "DataAccess.DataHelper" {
    class DbHelper {
        + getConnection(): Connection
        + closeConnection()
    }
}

package "DataAccess.DTO" {
    class PinturaDTO {
        - idPintura: int
        - titulo: String
        - anio: int
        - descripcion: String
        - codigoBarras: String
        - idCategoria: int
        - idAutor: int
        - idSala: int
        - imagen: String
        - estado: String
        - fechaCrea: LocalDateTime
        - fechaModifica: LocalDateTime
        + getIdPintura(): int
        + setIdPintura(id: int)
        + ...
    }

    class UsuarioDTO {
        - idUsuarios: int
        - nombre: String
        - identificacion: String
        - idCredenciales: int
        - idRol: int
        - estado: String
        - fechaCrea: LocalDateTime
        - fechaModifica: LocalDateTime
        + getIdUsuarios(): int
        + setIdUsuarios(id: int)
        + ...
    }
}

package "GUI" {
    class AppMuseoUI {
        + iniciarApp()
        + mostrarInicio()
    }

    class AdminPanel {
        - usuarioPanel: UsuarioPanel
        - pinturaPanel: PinturaPanel
        + mostrarUsuarios()
        + mostrarPinturas()
    }

    class UsuarioPanel {
        - usuarioDAO: UsuarioDAO
        + agregarUsuario()
        + modificarUsuario()
        + eliminarUsuario()
    }

    class PinturaPanel {
        - pinturaDAO: PinturaDAO
        + agregarPintura()
        + modificarPintura()
        + eliminarPintura()
    }

    class InicioPanel {
        + ...
    }

    class PanelVisitante {
        + ...
    }

    class SplashScreenPanel {
        + ...
    }
}

' Relaciones
PinturaService --> PinturaDAO
UsuarioService --> UsuarioDAO
PinturaPanel --> PinturaDAO
UsuarioPanel --> UsuarioDAO
AdminPanel --> UsuarioPanel
AdminPanel --> PinturaPanel
AppMuseoUI --> AdminPanel

@enduml